--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <option value="3">3x3</option>
                     <option value="4">4x4</option>
                     <option value="5" selected>5x5</option>
+                    <option value="6">6x6</option>
+                    <option value="7">7x7</option>
+                    <option value="8">8x8</option>
                 </select>
             </div>
             
