feat: Add option to leave center blank (crossed) for 5x5, 7x7, 9x9 grids
- Added a toggle in the settings panel to leave the center cell blank for 5x5, 7x7, and 9x9 grids
- When enabled, the center cell is visually crossed out in the preview and left blank in the PDF
- Updated card generation logic to support the blank center cell (isFreeSpace)
- Updated styles to show a crossed-out effect for the blank cell
- All UI, logic, and export flows updated to support this feature

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             </div>
             
             <div class="form-group">
+                <label for="centerBlankToggle">Leave Center Blank (5x5, 7x7, 9x9)</label>
+                <input type="checkbox" id="centerBlankToggle">
+            </div>
+            
+            <div class="form-group">
                 <button id="backupBtn" data-translate="backupData">Backup Data</button>
                 <input type="file" id="restoreInput" accept=".json" style="display: none;">
                 <button id="restoreBtn" data-translate="restoreData">Restore Data</button>
