--- a/src/index.html
+++ b/src/index.html
@@ -56,16 +56,17 @@
                 <h2 data-translate="iconManager">Icon Manager</h2>
                 <div class="icon-tools">
                     <div class="file-input-wrapper">
-                        <button id="uploadIconBtn" data-translate="uploadIcons">Upload Icons</button>
+                        <button id="uploadBtn" data-translate="uploadIcons">Upload Icons</button>
                         <input type="file" id="iconUpload" accept="image/*" multiple>
                     </div>
-                    <button id="clearIcons" data-translate="clearIcons">Clear All Icons</button>
+                    <button id="clearIconsBtn" data-translate="clearIcons">Clear All Icons</button>
                     <span class="icon-count">
                         <span data-translate="currentlyUsing">Currently using</span> 
                         <span id="iconCount">0</span> 
                         <span data-translate="icons">icons</span>
                     </span>
                 </div>
+                <div id="iconGallery" class="icon-gallery"></div>
             </div>
             
             <div class="data-management">
