refactor: clean up file structure according to coding guidelines
## Major Changes
- Remove duplicate files (styles.css, script.js, test.html from root)
- Move icons from root/icons/ to public/assets/icons/
- Move db.js and languages.js to src/js/modules/
- Organize all tests in tests/ directory mirroring src/ structure
- Remove screenshots from root (moved to docs/ previously)

## Configuration Updates
- Update Jest config to use tests/ directory and jsdom environment
- Add path alias (@/) for cleaner imports in tests
- Update Cypress config for new screenshots location
- Update .gitignore and README for new structure

## Test Improvements
- Convert all test imports to use ES6 modules with @/ alias
- Ensure all tests follow proper structure in tests/ directory
- Update db.test.js to use ES6 imports instead of CommonJS

## File Structure Now Follows Guidelines
- ✅ External CSS/JS files (no inline styles/scripts)
- ✅ Clean src/ structure with proper modules
- ✅ Tests mirror src/ structure in tests/ directory
- ✅ Assets properly organized in public/
- ✅ Documentation in docs/
- ✅ Root level clean with only config files

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Road Trip Bingo Generator</title>
     <meta name="description" content="Generate customizable bingo cards for road trips">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1 data-translate="title">Road Trip Bingo Generator</h1>
@@ -97,5 +98,8 @@
     
     <!-- Third-party libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    
+    <!-- Main application script -->
+    <script type="module" src="js/app.js"></script>
 </body>
-</html> 
+</html>
