--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,13 @@
                   <span data-translate="centerBlankToggle">Leave center cell blank (odd grids only)</span>
                 </label>
               </div>
+
+            <div class="form-group">
+                <label for="sameCardToggle" class="checkbox-label">
+                  <input type="checkbox" id="sameCardToggle">
+                  <span data-translate="sameCardToggle">Use identical card for all players</span>
+                </label>
+              </div>
             
             <div class="form-group">
                 <label for="multiHitToggle" class="checkbox-label">
