feat: major enhancements - PDF layouts, icon distribution, and comprehensive improvements
- Add PDF layout options (one-per-page vs two-per-page)
- Implement icon distribution modes (same-icons vs different-icons)
- Enhance PDF generation with better rendering and error handling
- Add comprehensive UI controls for new features
- Expand test coverage with enhanced mocking
- Improve Jest setup with better Blob mocking
- Update translations for new features (EN/DE)
- Maintain compatibility with merged upstream changes

--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
             <option value="SLOW">High (Smallest file)</option>
           </select>
         </div>
+        <div class="form-group">
+          <label for="pdfLayout" data-translate="pdfLayout">PDF Layout:</label>
+          <select id="pdfLayout">
+            <option value="one-per-page">One card per page</option>
+            <option value="two-per-page" selected>Two cards per page</option>
+          </select>
+        </div>
         <button id="downloadBtn" data-translate="downloadPDF" disabled>Download PDF</button>
       </div>
     </div>
