Add same card toggle to main index

--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
           <span data-translate="centerBlankToggle">Leave center cell blank (odd grids only)</span>
         </label>
       </div>
-      
+
+      <div class="form-group">
+        <label for="sameCardToggle" class="checkbox-label">
+          <input type="checkbox" id="sameCardToggle">
+          <span data-translate="sameCardToggle">Use identical card for all players</span>
+        </label>
+      </div>
+
       <div class="form-group">
         <label for="multiHitToggle" class="checkbox-label">
           <input type="checkbox" id="multiHitToggle">
